Scroll Animations On Mobile Fix #3.

--- a/style.css
+++ b/style.css
@@ -865,18 +865,6 @@ footer {
         width: auto;
         height: auto;
     }
-
-    .hidden {
-        opacity: 1;
-        transform: translateX(0);
-        transition: all 0s;
-    }
-
-    .show {
-        opacity: 1;
-        transform: translateX(0);
-        transition: all 0s;
-    }
 }
 
 @media (max-width: 599px) {
